# ServerVoiceApp

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  server.cpp  server.h
certificates/: cert.pem  key.pem
core/: CMakeLists.txt  main.cpp
db/: CMakeLists.txt  cassandra_iterator.h  cassandrahandler.cpp  cassandrahandler.h  helper.cpp  helper.h  postgreshandler.cpp  postgreshandler.h  request_repositories.cpp  request_repositories.h
gateway/: CMakeLists.txt  commanddispatcher.cpp  commanddispatcher.h  gateway.cpp  gateway.h  helper_gateway.h  jwtservice.cpp  jwtservice.h
local/lib/: libcassandra.so.2.17.1  libwhisper.so.1.7.5
local/lib/cmake/LibDataChannel/: LibDataChannelTargets-release.cmake
local/lib/cmake/ggml/: ggml-config.cmake  ggml-version.cmake
local/lib/cmake/libpqxx/: libpqxx-config-version.cmake  libpqxx-targets.cmake
local/lib/cmake/whisper/: whisper-config.cmake
local/lib/pkgconfig/: cassandra.pc  libpqxx.pc
sfu/: CMakeLists.txt  janushandler.cpp  janushandler.h  sfu.h  voicesfumanager.cpp  voicesfumanager.h
